--- a/style.css
+++ b/style.css
@@ -75,6 +75,9 @@
     grid-template-columns: repeat(7,1fr);
 
  }
+ .compannys-section{
+  margin-top: 200px;
+ }
  .hrr{
     text-align: center;
     width:80%;
@@ -83,10 +86,10 @@
 
  /* populat-collection style */
 .popular-parent{
-  margin: 0 200px;
   display: grid;
   grid-template-columns: repeat(3,1fr); 
   gap: -10px; 
+  justify-items: center;
 }
 
 .popular-child{
@@ -150,7 +153,7 @@
     justify-content: center;
 }
 .footer-sec-child-2{
-width:70%;
+width:50%;
 }
 .footer-sec-child-2 h2{
     font-size: 40px;
@@ -160,8 +163,6 @@ width:70%;
     font-size: 16px;
    font-weight: 700;
    color: rgb(108, 108, 108);
-   width: 501px;
-   height: 88px;
 }
 .footer-sec-child-2 button{
     width: 155px;
@@ -208,4 +209,79 @@ width:70%;
 }
 .footer-heading{
 color:white;
+}
+
+
+/* responsive code */
+@media screen and (max-width:576px) {
+    .nav-main{
+        display: flex;
+       flex-direction: column;
+       justify-items: center;
+    }
+   .banner-section{
+    flex-direction: column;
+    justify-content: center;
+    justify-items: center;
+    margin: 0 auto;
+    gap: 50px;
+    
+   }
+   .banner-1{
+    width: 100%;
+    justify-items: center;
+    text-align: center;
+    margin: 0 auto;
+   }
+   .banner-2{
+    width: 100%;
+    margin: 0 auto;
+   }
+   .circle{
+    width:30%;
+   }
+   .camera{
+    width:30%
+   }
+   .hrr{
+   width: 100%;
+   }
+   .compannys-section{
+    margin-top: 600px;
+   }
+   .copannys-parent{
+    display: grid;
+    margin: 0 auto;
+    grid-template-columns: repeat(3,1fr);
+    grid-area: 5px;
+    justify-items: center;
+   }
+   .copannys-parent img{
+    margin-top: 8px;
+   }
+   .popular-parent{
+    display: grid;
+    grid-template-columns: repeat(1,1fr);
+   
+   }
+   .seemore{
+    display: flex;
+   justify-content: center;
+   margin: auto;
+   margin-top: 20px;
+}
+.footer-sec-parent{
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin: auto;
+  justify-items: center;
+}
+.footer-sec-child-2{
+  width: 100%;
+ 
+}
+.footer-sec{
+  margin: 0;
+}
 }
