--- a/style.css
+++ b/style.css
@@ -87,14 +87,15 @@
  /* populat-collection style */
 .popular-parent{
   display: grid;
-  grid-template-columns: repeat(3,1fr); 
-  gap: -10px; 
+  grid-template-columns: repeat(4,1fr); 
+  grid-column-gap:100px; 
   justify-items: center;
+  margin: 0 100px;
 }
 
 .popular-child{
-    width: 329px;
-    height: 476px;
+    width: 100%;
+    
     border-radius: 5px;
     box-shadow: 0px 0px 40px 0px rgba(0, 0, 0, 0.15);
     background: rgb(255, 255, 255);
@@ -124,15 +125,10 @@
     font-weight: 500;
  }
 .seemore{
-    display: flex;
-   margin-left: 1450px;
-   border: none;
-   text-decoration: none;
-   margin-top: 20px;
    display: flex;
-   align-items: center;
-   gap: 8px;
+   margin-top: 20px;
    color: rgba(224, 44, 109, 0.87);
+justify-content: center;
 }
 
 /* footer section style  */
@@ -213,7 +209,7 @@ color:white;
 
 
 /* responsive code */
-@media screen and (max-width:576px) {
+@media screen and (max-width:599px) {
     .nav-main{
         display: flex;
        flex-direction: column;
@@ -240,9 +236,6 @@ color:white;
    .circle{
     width:30%;
    }
-   .camera{
-    width:30%
-   }
    .hrr{
    width: 100%;
    }
@@ -253,7 +246,7 @@ color:white;
     display: grid;
     margin: 0 auto;
     grid-template-columns: repeat(3,1fr);
-    grid-area: 5px;
+    gap: 5px;
     justify-items: center;
    }
    .copannys-parent img{
@@ -262,6 +255,7 @@ color:white;
    .popular-parent{
     display: grid;
     grid-template-columns: repeat(1,1fr);
+    margin: 0;
    
    }
    .seemore{
@@ -276,12 +270,114 @@ color:white;
   gap: 20px;
   margin: auto;
   justify-items: center;
+  margin: 0 auto;
 }
 .footer-sec-child-2{
   width: 100%;
+  margin: 0 auto;
  
 }
 .footer-sec{
   margin: 0;
 }
+.circle {
+  width: 100%;
 }
+.camera {
+  width: 100%;
+}
+.banner-2{
+  width: 100%;
+  padding: 0;
+  margin: auto;
+} 
+}
+
+/* for tablate responsive style */
+ @media (min-width:577px)  and (max-width:768px) {
+   .nav-main{
+    display:flex;
+    justify-content: center;
+   margin: 0;
+    gap:100px;
+    /* grid-template-columns: repeat(2,1fr); */
+   }
+  
+   .banner-section{
+    display: flex;
+    gap: 20px;
+    margin-top:50px;
+    justify-content: center;
+    margin: 0 auto;
+   
+   }
+   .popular-parent{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    gap: 10px;
+    width: 100%;
+    margin: 0;
+
+   }
+   .popular-child{
+    width:100%; 
+  justify-items: center;
+
+   }
+   .banner-2{
+    width: 100%;
+    margin: 0;
+    padding: 40px;
+   }
+   .banner-1{
+    width: 100%;
+   }
+   .circle{
+    width: 100%;
+   }
+   .camera{
+    width: 100%;
+   }
+   .copannys-parent{
+    margin: 0 50px;
+    display: grid;
+    grid-template-columns: repeat(7,1fr);
+
+ }
+ .banner-1 h1{
+font-size: 32px;
+ }
+ .banner-1 p{
+font-size: 14px;
+font-weight: 400;
+ }
+ .footer-sec{
+  margin: 0;
+  margin-top: 40px;
+ }
+   .footer-sec-parent{
+    display: flex;
+    margin: 0;
+    gap:10px;  }
+   .footer-sec-child-1{
+    width: calc(100% - 5px);
+   }
+   .footer-sec-child-2 h2{
+    font-size: 30px;
+    font-weight: 500;
+   }
+   .footer-sec-child-2{
+    width: calc(100% - 5px );
+   }
+   .copannys-parent{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    gap: 20px;
+    justify-items: center;
+    margin-top:20px;
+   }
+   .compannys-section{
+    margin-top: 200px;
+   }
+
+ }
